      details.

    - When the mu store (database) is not present or not up to date, mu4e will
      attempt to re-index it automatically.

    - ~org-mode~ support is enabled by default now. ~speedbar~ support is disabled
      by default.

   - Add message-id's to messages when saving drafts, so we can find them even
     with ~mu4e-headers-skip-duplicates~.

*** toys

    - Updated the ~mug~ toy UI to use Webkit2/GTK+. Note that this is just a toy
      which is not meant for distribution. ~msg2pdf~ is disabled for now.

** 1.2

   After a bit over a year since version 1.0, here is version 1.2. This is
   mostly a bugfix release, but there are also a number of new features.

*** mu

    - Substantial (algorithmic) speed-up of message-threading; this also (or
      especially) affects mu4e, since threading is the default. See commit
      eb9bfbb1ca3c for all the details, and thanks to Nicolas Avrutin.

    - The query-parser now generates better queries for wildcard searches, by
      using the Xapian machinery for that (when available) rather than
      transforming into regexp queries.

    - The perl backend is hardly used and will be removed; for now we just
      disable it in the build.

    - Allow outputting messages in json format, closely following the sexp
      output. This adds an (optional) dependency on the Json-Glib library.

*** mu4e

    - Bump the minimal required emacs version to 24.4. This was already de-facto
      true, now it is enforced.

    - In mu4e-bookmarks, allow the `:query` element to take a function (or
      lambda) to dynamically generate the query string.

    - There is a new message-view for mu4e, based on the Gnus' article-view.
      This bring a lot of (but not all) of the very rich Gnus article-mode
      feature-set to mu4e, such as S/MIME-support, syntax-highlighting,

      For now this is experimental ("tech preview"), but might replace the
      current message-view in a future release. Enable it with: